--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,8 @@
 }
 .submitTaskBtn{
   padding: 0.7rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   color: white;
   background-color: blue;
   border-radius: 8px;
@@ -79,4 +81,41 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.tagbarMainDiv{
+  background-color: rgb(204, 203, 203);
+  width: 69.5rem;
+  margin-left: 12rem;
+  padding-left: 2rem;
+  padding-right: 1rem;
+  padding-top: 3px;
+  padding-bottom: 5px;
+  border-radius: 5px;
+}
+.cardHeadingIcon{
+  width: 25rem;
+  background-color: black;
+  color: white;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  padding: 0.3rem;
+  display: grid;
+  grid-template-columns: 90% 10%;
+}
+.cardHeading{
+  text-align: center;
+}
+.descriptionDiv{
+  padding: 1.2rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+}
+.cardContentDiv{
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-bottom: 1.2rem;
+}
+.cardSecondPart{
+  width: 25.5rem;
+  border: 0.1px solid gainsboro;
 }
